# tytanic

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  LICENSE.Apache-2.0  LICENSE.MIT  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  tracking_issue.md
.github/workflows/: ci.yml  docker.yml  gh-pages.yml  release.yml
assets/test-package/: typst.toml
assets/test-package/src/: internal.typ  lib.typ
assets/test-package/template/: main.typ
assets/test-package/tests/failing/compile/: test.typ
assets/test-package/tests/failing/ephemeral-compare-failure/: test.typ
assets/test-package/tests/failing/ephemeral-compile-failure/: ref.typ  test.typ
assets/test-package/tests/failing/persistent-compare-failure/: test.typ
assets/test-package/tests/failing/persistent-compile-failure/: test.typ
assets/test-package/tests/passing/ephemeral/: ref.typ
assets/workflows/: ci.yml  tests.yml
crates/typst-test/: Cargo.toml
crates/typst-test-cli/: Cargo.toml
crates/typst-test-cli/src/: cli.rs  download.rs  main.rs  package.rs  project.rs  report.rs  world.rs
crates/typst-test-cli/src/cli/: add.rs  compare.rs  compile.rs  edit.rs  list.rs  mod.rs  remove.rs  run.rs  status.rs  uninit.rs  util.rs
crates/typst-test-cli/src/cli/util/: clean.rs  export.rs
crates/typst-test-cli/src/test/: runner.rs
crates/typst-test-lib/: Cargo.toml
crates/typst-test-lib/src/: lib.rs  matcher.rs  render.rs  store.rs  test_set.rs
crates/typst-test-lib/src/matcher/: eval.rs  parsing.rs
crates/typst-test-lib/src/store/test/: collector.rs
crates/typst-test-lib/src/test_set/: eval.rs  parsing.rs
crates/typst-test/src/: cli.rs  main.rs  report.rs
crates/typst-test/src/cli/: mod.rs
crates/typst-test/src/project/: mod.rs
crates/typst-test/src/project/test/: context.rs  mod.rs
crates/tytanic/: Cargo.toml  build.rs
crates/tytanic-core/: Cargo.toml
crates/tytanic-core/src/: _dev.rs  analysis.rs  config.rs  diag.rs  dsl.rs  filter.rs  lib.rs  library.rs  result.rs  runner.rs  suite.rs
crates/tytanic-core/src/doc/: compare.rs  compile.rs  mod.rs  render.rs
crates/tytanic-core/src/project/: mod.rs  store.rs  vcs.rs
crates/tytanic-core/src/project/store/: legacy.rs  v1.rs
crates/tytanic-core/src/stdx/: fmt.rs  fs.rs  result.rs
crates/tytanic-core/src/suite/: mod.rs  xml.rs
crates/tytanic-core/src/test/: annot.rs  annotation.rs  id.rs  ident.rs  mod.rs  suite.rs  template.rs  unit.rs
crates/tytanic-core/src/test_set/: id.rs  mod.rs  parse.rs
crates/tytanic-core/src/world_builder/: datetime.rs  file.rs  font.rs  library.rs  mod.rs
crates/tytanic-filter/: Cargo.toml
crates/tytanic-filter/src/: exact.rs  lib.rs
crates/tytanic-filter/src/ast/: atom.rs  expr.rs  func.rs  grammar.pest  id.rs  mod.rs  num.rs  parser.rs  pat.rs  str.rs
crates/tytanic-filter/src/eval/: func.rs  mod.rs  set.rs  value.rs
crates/tytanic-filter/src/test_set/: builtin.rs  mod.rs
crates/tytanic-filter/src/test_set/ast/: atom.rs  expr.rs  func.rs  glob.rs  grammar.pest  id.rs  mod.rs  num.rs  parser.rs  pat.rs  regex.rs  str.rs
crates/tytanic-filter/src/test_set/eval/: func.rs  mod.rs  set.rs  value.rs
crates/tytanic-library/: Cargo.toml
crates/tytanic-library/src/: lib.rs
crates/tytanic-runner/: Cargo.toml
crates/tytanic-runner/src/: export.rs  lib.rs  provide.rs  render.rs  report.rs
crates/tytanic-test-cli/: Cargo.toml
crates/tytanic-test-cli/src/: main.rs
crates/tytanic-utils/: Cargo.toml
crates/tytanic-utils/src/: assert.rs  fmt.rs  fs.rs  lib.rs  path.rs  result.rs  typst.rs  ui.rs
crates/tytanic-utils/src/snapshots/: tytanic_utils__ui__tests__indented.snap  tytanic_utils__ui__tests__indented_continued.snap  tytanic_utils__ui__tests__indented_nested.snap  tytanic_utils__ui__tests__indented_set_color.snap
crates/tytanic-utils/src/typst/: manifest.rs  mod.rs
crates/tytanic-utils/src/typst/world/: mod.rs
crates/tytanic-utils/src/typst/world/default/: datetime.rs  file.rs  font.rs  library.rs  mod.rs
crates/tytanic/src/: json.rs  kit.rs  main.rs  report.rs  runner.rs  ui.rs  world.rs
crates/tytanic/src/cli/: add.rs  delete.rs  list.rs  mod.rs  new.rs  options.rs  remove.rs  run.rs  status.rs  update.rs
crates/tytanic/src/cli/commands/: delete.rs  list.rs  mod.rs  new.rs  run.rs  status.rs  update.rs
crates/tytanic/src/cli/commands/util/: about.rs  clean.rs  completion.rs  fonts.rs  manpage.rs  migrate.rs  mod.rs  vcs.rs
crates/tytanic/src/cli/util/: clean.rs  fonts.rs  migrate.rs  mod.rs  vcs.rs
crates/tytanic/src/snapshots/: tt__ui__tests__counted.snap  tt__ui__tests__indented.snap  tt__ui__tests__indented_continued.snap  tt__ui__tests__indented_nested.snap  tt__ui__tests__indented_set_color.snap
crates/tytanic/tests/: .test_cmd_delete.rs.pending-snap  .test_cmd_list.rs.pending-snap  test_cmd_delete.rs  test_cmd_list.rs  test_cmd_new.rs  test_cmd_status.rs  test_cmd_update.rs  test_options.rs  test_validation_failure.rs
crates/tytanic/tests/fixture/: mod.rs
docs/: CHANGELOG.md  CONTRIBUTING.md  architecture.md  commit-guidelines.md  dev-setup.md  releasing.md  test-set-dsl.typ
docs/book/: book.toml  book.typ
docs/book/src/: README.md  SUMMARY.md  intro.typ  packages.typ
docs/book/src/.guides/: tests.md
docs/book/src/guides/: ci.md  ci.typ  test-sets.md  test-sets.typ  tests.md  tests.typ  watching.md  watching.typ
docs/book/src/quickstart/: install.md  install.typ  usage.md  usage.typ
docs/book/src/reference/: compat.md  compat.typ  config.md  config.typ  test-sets.typ  tests.typ
docs/book/src/reference/test-sets/: README.md  built-in.md  built-in.typ  eval.typ  grammar.md  grammar.typ
docs/book/src/reference/tests/: README.md  annotations.md  annotations.typ  lib.typ  regression-tests.md  template.md  template.typ  unit.md  unit.typ
docs/book/template/: template.typ  theme-style.toml
