[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.2"
# must match ci.yml
rust-version = "1.88"
authors = ["tingerrr <tinger@tinger.dev>"]
edition = "2024"
homepage = "https://typst-community.github.io/tytanic/"
repository = "https://github.com/typst-community/tytanic"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools::testing"]
keywords = ["typst", "test"]
readme = "README.md"

[workspace.dependencies]
tytanic-core = { version = "0.2.2", path = "crates/tytanic-core" }
tytanic-filter = { version = "0.2.2", path = "crates/tytanic-filter" }
tytanic-utils = { version = "0.2.2", path = "crates/tytanic-utils" }

assert_cmd = "2.0.16"
assert_fs = "1.1.2"
chrono = "0.4.38"
clap = "4.4.12"
clap_complete = "4.5.48"
clap_mangen = "0.2.26"
codespan-reporting = "0.11.1"
color-eyre = "0.6.3"
comemo = "0.4.0"
ctrlc = "3.4.5"
dirs = "5.0.1"
ecow = "0.2.2"
fontdb = "0.18.0"
glob = "0.3.1"
insta = "1.39.0"
once_cell = "1.19.0"
oxipng = "9.1.3"
pest = "2.7.10"
pest_derive = "2.7.10"
png = "0.17.16"
predicates = "3.1.3"
rayon = "1.8.0"
regex = "1.10.5"
serde = "1.0.195"
serde_json = "1.0.121"
strsim = "0.11.1"
tempdir = "0.3.7"
termcolor = "1.4.0"
thiserror = "1.0.56"
tiny-skia = "0.11.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"
toml = "0.8.19"
typst = "0.13.1"
typst-assets = "0.13.1"
typst-kit = "0.13.1"
typst-library = "0.13.1"
typst-render = "0.13.1"
typst-syntax = "0.13.1"
uuid = "1.11.0"
