[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.3"
# must match ci.yml
rust-version = "1.89"
authors = ["tingerrr <tinger@tinger.dev>"]
edition = "2024"
homepage = "https://typst-community.github.io/tytanic/"
repository = "https://github.com/typst-community/tytanic"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools::testing"]
keywords = ["typst", "test"]
readme = "README.md"

[workspace.dependencies]
tytanic-core = { version = "0.3.3", path = "crates/tytanic-core" }
tytanic-filter = { version = "0.3.3", path = "crates/tytanic-filter" }
tytanic-utils = { version = "0.3.3", path = "crates/tytanic-utils" }

assert_cmd = "2.1.2"
assert_fs = "1.1.2"
chrono = "0.4.38"
clap = "4.5.54"
clap_complete = "4.5.65"
clap_mangen = "0.2.26"
codespan-reporting = "0.11.1"
color-eyre = "0.6.3"
comemo = "0.5.0"
ctrlc = "3.4.5"
dirs = "6.0.0"
ecow = "0.2.2"
fontdb = "0.23.0"
glob = "0.3.1"
insta = "1.46.0"
once_cell = "1.19.0"
oxipng = "10.0.0"
pest = "2.8.5"
pest_derive = "2.8.5"
png = "0.17.16"
predicates = "3.1.3"
rayon = "1.8.0"
regex = "1.10.5"
serde = "1.0.195"
serde_json = "1.0.149"
strsim = "0.11.1"
temp-dir = "0.1.16"
termcolor = "1.4.0"
thiserror = "2.0.17"
tiny-skia = "0.11.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.18"
tracing-tree = "0.4.1"
toml = "0.8.19"
typst = "0.14.2"
typst-assets = "0.14.2"
typst-kit = "0.14.2"
typst-library = "0.14.2"
typst-render = "0.14.2"
typst-syntax = "0.14.2"
uuid = "1.11.0"
