[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.3"
# must match ci.yml
rust-version = "1.89"
authors = ["tingerrr <tinger@tinger.dev>"]
edition = "2024"
homepage = "https://typst-community.github.io/tytanic/"
repository = "https://github.com/typst-community/tytanic"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools::testing"]
keywords = ["typst", "test"]
readme = "README.md"

[workspace.dependencies]
tytanic-core = { version = "0.3.3", path = "crates/tytanic-core" }
tytanic-filter = { version = "0.3.3", path = "crates/tytanic-filter" }
tytanic-utils = { version = "0.3.3", path = "crates/tytanic-utils" }

assert_cmd = "2.1.2"
assert_fs = "1.1.2"
chrono = "0.4.43"
clap = "4.5.59"
clap_complete = "4.5.66"
clap_mangen = "0.2.26"
codespan-reporting = "0.11.1"
color-eyre = "0.6.3"
comemo = "0.5.1"
ctrlc = "3.5.2"
dirs = "6.0.0"
ecow = "0.2.2"
fontdb = "0.23.0"
glob = "0.3.1"
insta = "1.46.3"
once_cell = "1.19.0"
oxipng = "10.1.0"
pest = "2.8.6"
pest_derive = "2.8.6"
png = "0.17.16"
predicates = "3.1.4"
rayon = "1.8.0"
regex = "1.12.3"
serde = "1.0.195"
serde_json = "1.0.149"
strsim = "0.11.1"
temp-dir = "0.2.0"
termcolor = "1.4.0"
thiserror = "2.0.18"
tiny-skia = "0.12.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.18"
tracing-tree = "0.4.1"
toml = "1.0.2"
typst = "0.14.2"
typst-assets = "0.14.2"
typst-kit = "0.14.2"
typst-library = "0.14.2"
typst-render = "0.14.2"
typst-syntax = "0.14.2"
uuid = "1.21.0"
