[package]
name = "tytanic-core"
description = "The core library of the tytanic test runner."
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
tytanic-filter.workspace = true
tytanic-utils.workspace = true

chrono.workspace = true
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
oxipng.workspace = true
png.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tiny-skia.workspace = true
tracing.workspace = true
toml.workspace = true
typst.workspace = true
typst-assets.workspace = true
typst-kit.workspace = true
typst-library.workspace = true
typst-render.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
bytemuck = "1.16.1"
