[package]
name = "tytanic-core"
description = "Core types for the Tytanic test runner."
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[lints]
workspace = true

[features]
default = ["terminal-diagnostics"]
terminal-diagnostics = ["dep:codespan-reporting", "dep:termcolor"]

[dependencies]
tytanic-utils.workspace = true

# Only used for terminal diagnostics.
codespan-reporting = { workspace = true, optional = true }
termcolor = { workspace = true, optional = true }

chrono = { workspace = true, features = ["serde"] }
ecow.workspace = true
dirs.workspace = true
ignore.workspace = true
serde = { workspace = true, features = ["derive"] }
tiny-skia.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
typst.workspace = true
typst-render.workspace = true
typst-syntax.workspace = true
unicode-ident.workspace = true
uuid.workspace = true

[dev-dependencies]
bytemuck.workspace = true
