[package]
name = "tytanic-utils"
description = "Helper functions, types and traits for the tytanic test runner."
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
ecow.workspace = true
temp-dir.workspace = true
toml.workspace = true
tracing.workspace = true
typst-syntax.workspace = true
