[package]
name = "tytanic"
description = "A test runner for typst projects."
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[lints]
workspace = true

[[bin]]
name = "tt"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
tytanic-core.workspace = true
tytanic-filter.workspace = true
tytanic-library.workspace = true
tytanic-utils.workspace = true

camino = { workspace = true, features = ["serde1"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
clap_complete.workspace = true
clap_mangen.workspace = true
color-eyre.workspace = true
ctrlc.workspace = true
ecow.workspace = true
fontdb.workspace = true
once_cell.workspace = true
oxipng.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
termcolor.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tracing.workspace = true
typst-kit = { workspace = true, features = ["emit-diagnostics"] }
typst-layout.workspace = true
typst-render.workspace = true
typst-syntax.workspace = true
typst.workspace = true

[build-dependencies]
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta = { workspace = true, features = ["yaml", "filters"] }
predicates.workspace = true
temp-dir.workspace = true
toml.workspace = true

[features]
default = [
  "embedded-fonts",
  "scan-fonts",
  "system-files",
  "system-packages",
  "universe-packages",
  "datetime",
  "system-downloader",
]

# Typst-kit mirrored features (some are excluded because they are current unused or disabling them
# makes no sense).
embedded-fonts = ["typst-kit/embedded-fonts"]
scan-fonts = ["typst-kit/scan-fonts"]
system-files = ["typst-kit/system-files"]
system-packages = ["typst-kit/system-packages"]
universe-packages = ["typst-kit/universe-packages"]
datetime = ["typst-kit/datetime"]
system-downloader = ["typst-kit/system-downloader"]
vendor-openssl = ["typst-kit/vendor-openssl"]
